--- a/app/src/main/res/values/strings_app.xml
+++ b/app/src/main/res/values/strings_app.xml
@@ -70,7 +70,7 @@
 
     <string name="dialog_title_add_note">Create note</string>
 
-    <string name="dialog_text_volume" translatable="false">%d\%</string>
+    <string name="dialog_text_volume" translatable="false">%d%%</string>
 
     <!-- Dialog buttons -->
     <string name="dialog_btn_accept">Apply</string>
