--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -57,7 +57,7 @@
                         style="@style/Text.SmallCard.Subtitle"
                         android:layout_marginEnd="@dimen/layout_4dp"
                         android:layout_marginRight="@dimen/layout_4dp"
-                        app:futureTime='@{noteModel.notificationItem.alert}'
+                        app:futureTime='@{noteModel.alarmItem.date}'
                         tools:text="@string/preview_notification_date"/>
 
             </LinearLayout>
