--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="@dimen/layout_8dp"
             android:orientation="horizontal">
 
-        <!-- TODO #RELEASE -->
+        <!-- TODO #RELEASE передавать noteModel и при пустой дате alarmItem - делать не видимым индикатор -->
 
         <ImageView
                 android:id="@+id/note_notification_image"
