--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -5,14 +5,16 @@
 
     <data>
 
+        <import type="java.util.List"/>
+        <import type="sgtmelon.scriptum.model.item.NoteItem"/>
+        <import type="sgtmelon.scriptum.model.item.RollItem"/>
+
         <import alias="v" type="android.view.View"/>
         <import alias="text" type="android.text.TextUtils"/>
-        <import alias="def" type="sgtmelon.scriptum.model.annotation.Theme"/>
+        <import alias="theme" type="sgtmelon.scriptum.model.annotation.Theme"/>
 
         <variable name="currentTheme" type="int"/>
-        <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
-        <variable name="rollList"
-                  type="java.util.List&lt;sgtmelon.scriptum.model.item.RollItem&gt;"/>
+        <variable name="noteModel" type="sgtmelon.scriptum.model.NoteModel"/>
 
     </data>
 
@@ -21,7 +23,7 @@
             style="@style/Card"
             app:cardCornerRadius="@dimen/radius_4dp"
             app:cardUseCompatPadding="false"
-            app:noteColor='@{noteItem.color}'
+            app:noteColor='@{noteModel.noteItem.color}'
             tools:cardBackgroundColor="?attr/clPrimary">
 
         <FrameLayout
@@ -39,33 +41,33 @@
                     <TextView
                             android:id="@+id/note_roll_name_text"
                             style="@style/Text.NoteItem.Name"
-                            android:text='@{noteItem.name}'
-                            android:visibility='@{text.isEmpty(noteItem.name) ? v.GONE : v.VISIBLE}'
+                            android:text='@{noteModel.noteItem.name}'
+                            android:visibility='@{text.isEmpty(noteModel.noteItem.name) ? v.GONE : v.VISIBLE}'
                             tools:text="@string/preview_note_name"/>
 
                     <include
                             layout="@layout/include_item_note_roll"
-                            android:visibility='@{rollList.size() &gt;= 1 ? v.VISIBLE : v.GONE}'
-                            app:rollItem='@{rollList.size() &gt;= 1 ? rollList.get(0) : null}'/>
+                            android:visibility='@{noteModel.rollList.size() &gt;= 1 ? v.VISIBLE : v.GONE}'
+                            app:rollItem='@{noteModel.rollList.size() &gt;= 1 ? noteModel.rollList.get(0) : null}'/>
 
                     <include
                             layout="@layout/include_item_note_roll"
-                            android:visibility='@{rollList.size() &gt;= 2 ? v.VISIBLE : v.GONE}'
-                            app:rollItem='@{rollList.size() &gt;= 2 ? rollList.get(1) : null}'/>
+                            android:visibility='@{noteModel.rollList.size() &gt;= 2 ? v.VISIBLE : v.GONE}'
+                            app:rollItem='@{noteModel.rollList.size() &gt;= 2 ? noteModel.rollList.get(1) : null}'/>
 
                     <include
                             layout="@layout/include_item_note_roll"
-                            android:visibility='@{rollList.size() &gt;= 3 ? v.VISIBLE : v.GONE}'
-                            app:rollItem='@{rollList.size() &gt;= 3 ? rollList.get(2) : null}'/>
+                            android:visibility='@{noteModel.rollList.size() &gt;= 3 ? v.VISIBLE : v.GONE}'
+                            app:rollItem='@{noteModel.rollList.size() &gt;= 3 ? noteModel.rollList.get(2) : null}'/>
 
                     <include
                             layout="@layout/include_item_note_roll"
-                            android:visibility='@{rollList.size() &gt;= 4 ? v.VISIBLE : v.GONE}'
-                            app:rollItem='@{rollList.size() &gt;= 4 ? rollList.get(3) : null}'/>
+                            android:visibility='@{noteModel.rollList.size() &gt;= 4 ? v.VISIBLE : v.GONE}'
+                            app:rollItem='@{noteModel.rollList.size() &gt;= 4 ? noteModel.rollList.get(3) : null}'/>
 
                     <include
                             layout="@layout/include_item_note_info"
-                            app:noteItem='@{noteItem}'/>
+                            app:noteModel='@{noteModel}'/>
 
                 </LinearLayout>
 
@@ -74,9 +76,9 @@
                         style="@style/Image.Color.Vertical.End"
                         android:contentDescription="@null"
                         app:indicatorTheme='@{currentTheme}'
-                        app:indicatorColor='@{noteItem.color}'
+                        app:indicatorColor='@{noteModel.noteItem.color}'
                         app:visibleTheme='@{currentTheme}'
-                        app:visibleOn='@{def.dark}'
+                        app:visibleOn='@{theme.dark}'
                         tools:tint="@color/note_green_dark"
                         tools:visibility="visible"/>
 
