Перенёс модели-entity в отдельную папку внутри room
Tag: #Refactor

--- a/app/src/main/res/layout/include_item_note_roll.xml
+++ b/app/src/main/res/layout/include_item_note_roll.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <variable name="rollItem" type="sgtmelon.scriptum.model.item.RollItem"/>
+        <variable name="rollItem" type="sgtmelon.scriptum.room.entity.RollItem"/>
 
     </data>
 
