--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -6,8 +6,8 @@
     <data>
 
         <import type="java.util.List"/>
-        <import type="sgtmelon.scriptum.model.item.NoteItem"/>
-        <import type="sgtmelon.scriptum.model.item.RollItem"/>
+        <import type="sgtmelon.scriptum.room.entity.NoteItem"/>
+        <import type="sgtmelon.scriptum.room.entity.RollItem"/>
 
         <import alias="v" type="android.view.View"/>
         <import alias="text" type="android.text.TextUtils"/>
