--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="sgtmelon.scriptum.model.item.NoteItem"/>
+        <import type="sgtmelon.scriptum.room.entity.NoteItem"/>
 
         <import alias="v" type="android.view.View"/>
         <import alias="text" type="android.text.TextUtils"/>
