--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -7,7 +7,7 @@
 
         <import type="sgtmelon.scriptum.R"/>
 
-        <variable name="rollItem" type="sgtmelon.scriptum.model.item.RollItem"/>
+        <variable name="rollItem" type="sgtmelon.scriptum.room.entity.RollItem"/>
 
     </data>
 
