--- a/app/src/main/res/layout-v21/item_rank.xml
+++ b/app/src/main/res/layout-v21/item_rank.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <variable name="rankItem" type="sgtmelon.scriptum.model.item.RankItem"/>
+        <variable name="rankItem" type="sgtmelon.scriptum.room.entity.RankItem"/>
 
     </data>
 
