--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -7,8 +7,8 @@
     <data>
 
         <import type="java.util.List"/>
-        <import type="sgtmelon.scriptum.model.item.NoteItem"/>
-        <import type="sgtmelon.scriptum.model.item.AlarmItem"/>
+        <import type="sgtmelon.scriptum.room.entity.NoteItem"/>
+        <import type="sgtmelon.scriptum.room.entity.AlarmItem"/>
 
         <import alias="v" type="android.view.View"/>
         <import alias="text" type="android.text.TextUtils"/>
