--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -7,7 +7,7 @@
 
         <import alias="v" type="android.view.View"/>
 
-        <variable name="rollItem" type="sgtmelon.scriptum.model.item.RollItem"/>
+        <variable name="rollItem" type="sgtmelon.scriptum.room.entity.RollItem"/>
         <variable name="keyBin" type="boolean"/>
         <variable name="checkToggle" type="boolean"/>
 
