Переименовал NoteItem -> NoteEntity, исправление ошибок
Tag: #Refactor #Fix

--- a/app/src/main/res/layout-v21/include_toolbar_note.xml
+++ b/app/src/main/res/layout-v21/include_toolbar_note.xml
@@ -13,7 +13,7 @@
         <variable name="currentTheme" type="int"/>
 
         <variable name="editMode" type="boolean"/>
-        <variable name="noteItem" type="sgtmelon.scriptum.room.entity.NoteItem"/>
+        <variable name="noteItem" type="sgtmelon.scriptum.room.entity.NoteEntity"/>
 
     </data>
 
