--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -7,7 +7,7 @@
     <data>
 
         <import type="java.util.List"/>
-        <import type="sgtmelon.scriptum.room.entity.NoteItem"/>
+        <import type="sgtmelon.scriptum.room.entity.NoteEntity"/>
         <import type="sgtmelon.scriptum.room.entity.AlarmEntity"/>
 
         <import alias="v" type="android.view.View"/>
@@ -29,7 +29,7 @@
                 android:id="@+id/note_notification_image"
                 style="@style/Image.NoteItem.Info"
                 android:contentDescription="@null"
-                android:visibility='@{text.isEmpty(noteModel.alarmItem.date) ? v.GONE : v.VISIBLE}'
+                android:visibility='@{text.isEmpty(noteModel.alarmEntity.date) ? v.GONE : v.VISIBLE}'
                 app:srcCompat="@drawable/ic_notifications"
                 tools:visibility="visible"/>
 
@@ -37,8 +37,8 @@
                 android:id="@+id/note_info_bind_image"
                 style="@style/Image.NoteItem.Info"
                 android:contentDescription="@null"
-                android:src='@{noteModel.noteItem.type == noteType.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
-                android:visibility='@{noteModel.noteItem.status ? v.VISIBLE : v.GONE}'
+                android:src='@{noteModel.noteEntity.type == noteType.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
+                android:visibility='@{noteModel.noteEntity.status ? v.VISIBLE : v.GONE}'
                 tools:srcCompat="@drawable/ic_bind_roll"
                 tools:visibility="visible"/>
 
@@ -46,7 +46,7 @@
                 android:id="@+id/note_info_rank_image"
                 style="@style/Image.NoteItem.Info"
                 android:contentDescription="@null"
-                android:visibility='@{noteModel.noteItem.rankId.size == 0 ? v.GONE : v.VISIBLE}'
+                android:visibility='@{noteModel.noteEntity.rankId.size == 0 ? v.GONE : v.VISIBLE}'
                 app:srcCompat="@drawable/ic_rank"
                 tools:visibility="visible"/>
 
@@ -54,8 +54,8 @@
                 android:id="@+id/note_info_progress_text"
                 style="@style/Text.NoteItem.Info"
                 android:layout_width="wrap_content"
-                android:text='@{noteModel.noteItem.type == noteType.ROLL ? noteModel.noteItem.text : ""}'
-                android:visibility='@{noteModel.noteItem.type == noteType.ROLL ?  v.VISIBLE : v.GONE}'
+                android:text='@{noteModel.noteEntity.type == noteType.ROLL ? noteModel.noteEntity.text : ""}'
+                android:visibility='@{noteModel.noteEntity.type == noteType.ROLL ?  v.VISIBLE : v.GONE}'
                 tools:text="@string/preview_note_done"
                 tools:visibility="visible"/>
 
@@ -64,14 +64,14 @@
                 style="@style/Text.NoteItem.Info"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                app:pastTime='@{noteModel.noteItem.change}'
+                app:pastTime='@{noteModel.noteEntity.change}'
                 tools:text="@string/preview_note_time"/>
 
         <TextView
                 android:id="@+id/note_info_create_text"
                 style="@style/Text.NoteItem.Info"
                 android:layout_width="wrap_content"
-                app:pastTime='@{noteModel.noteItem.create}'
+                app:pastTime='@{noteModel.noteEntity.create}'
                 tools:text="@string/preview_note_time"/>
 
     </LinearLayout>
