--- a/app/src/main/res/layout/include_toolbar_note.xml
+++ b/app/src/main/res/layout/include_toolbar_note.xml
@@ -13,7 +13,7 @@
         <variable name="currentTheme" type="int"/>
 
         <variable name="editMode" type="boolean"/>
-        <variable name="noteItem" type="sgtmelon.scriptum.room.entity.NoteEntity"/>
+        <variable name="noteEntity" type="sgtmelon.scriptum.room.entity.NoteEntity"/>
 
     </data>
 
@@ -48,7 +48,7 @@
                             style="@style/EditText.ToolbarNote"
                             android:hint="@string/hint_enter_name"
                             android:importantForAutofill="noExcludeDescendants"
-                            android:text='@={noteItem.name}'
+                            android:text='@={noteEntity.name}'
                             android:visibility='@{editMode ? v.VISIBLE : v.INVISIBLE}'
                             tools:targetApi="o"
                             tools:visibility="invisible"/>
@@ -59,7 +59,7 @@
                             android:id="@+id/toolbar_note_text"
                             style="@style/Text.ToolbarNote"
                             android:hint="@string/hint_view_name"
-                            android:text='@{editMode ? "" : noteItem.name}'
+                            android:text='@{editMode ? "" : noteEntity.name}'
                             android:visibility='@{!editMode ? v.VISIBLE : v.INVISIBLE}'
                             tools:text="@string/preview_note_name"/>
 
