--- a/app/src/main/res/values/strings_app.xml
+++ b/app/src/main/res/values/strings_app.xml
@@ -133,7 +133,7 @@
     <string name="hind_enter_roll_empty">This item will be removed</string>
 
     <!-- Items text -->
-    <!-- RankItem -->
+    <!-- Rank -->
     <string name="list_item_rank_text_count">Texts:</string>
     <string name="list_item_rank_roll_count">Lists:</string>
 
