--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -27,7 +27,7 @@
 
         <ImageView
                 android:id="@+id/note_notification_image"
-                style="@style/Image.NoteItem.Info"
+                style="@style/Image.Note.Info"
                 android:contentDescription="@null"
                 android:visibility='@{text.isEmpty(noteModel.alarmEntity.date) ? v.GONE : v.VISIBLE}'
                 app:srcCompat="@drawable/ic_notifications"
@@ -35,7 +35,7 @@
 
         <ImageView
                 android:id="@+id/note_info_bind_image"
-                style="@style/Image.NoteItem.Info"
+                style="@style/Image.Note.Info"
                 android:contentDescription="@null"
                 android:src='@{noteModel.noteEntity.type == noteType.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
                 android:visibility='@{noteModel.noteEntity.status ? v.VISIBLE : v.GONE}'
@@ -44,7 +44,7 @@
 
         <ImageView
                 android:id="@+id/note_info_rank_image"
-                style="@style/Image.NoteItem.Info"
+                style="@style/Image.Note.Info"
                 android:contentDescription="@null"
                 android:visibility='@{noteModel.noteEntity.rankId.size == 0 ? v.GONE : v.VISIBLE}'
                 app:srcCompat="@drawable/ic_rank"
@@ -52,7 +52,7 @@
 
         <TextView
                 android:id="@+id/note_info_progress_text"
-                style="@style/Text.NoteItem.Info"
+                style="@style/Text.Note.Info"
                 android:layout_width="wrap_content"
                 android:text='@{noteModel.noteEntity.type == noteType.ROLL ? noteModel.noteEntity.text : ""}'
                 android:visibility='@{noteModel.noteEntity.type == noteType.ROLL ?  v.VISIBLE : v.GONE}'
@@ -61,7 +61,7 @@
 
         <TextView
                 android:id="@+id/note_info_change_text"
-                style="@style/Text.NoteItem.Info"
+                style="@style/Text.Note.Info"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 app:pastTime='@{noteModel.noteEntity.change}'
@@ -69,7 +69,7 @@
 
         <TextView
                 android:id="@+id/note_info_create_text"
-                style="@style/Text.NoteItem.Info"
+                style="@style/Text.Note.Info"
                 android:layout_width="wrap_content"
                 app:pastTime='@{noteModel.noteEntity.create}'
                 tools:text="@string/preview_note_time"/>
