--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -28,9 +28,9 @@
 
         <FrameLayout
                 android:id="@+id/note_roll_click_container"
-                style="@style/Container.NoteItem.Click">
+                style="@style/Container.Note.Click">
 
-            <LinearLayout style="@style/Container.NoteItem.Content">
+            <LinearLayout style="@style/Container.Note.Content">
 
                 <LinearLayout
                         android:layout_width="0dp"
@@ -40,7 +40,7 @@
 
                     <TextView
                             android:id="@+id/note_roll_name_text"
-                            style="@style/Text.NoteItem.Name"
+                            style="@style/Text.Note.Name"
                             android:text='@{noteModel.noteEntity.name}'
                             android:visibility='@{text.isEmpty(noteModel.noteEntity.name) ? v.GONE : v.VISIBLE}'
                             tools:text="@string/preview_note_name"/>
