--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -54,11 +54,11 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="Container.NoteItem.Click">
+    <style name="Container.Note.Click">
         <item name="android:background">?attr/selectableItemBackground</item>
     </style>
 
-    <style name="Container.NoteItem.Content">
+    <style name="Container.Note.Content">
         <item name="android:orientation">horizontal</item>
         <item name="android:padding">@dimen/layout_8dp</item>
     </style>
@@ -143,7 +143,7 @@
 
     <style name="Text.NoteItem"/>
 
-    <style name="Text.NoteItem.Name">
+    <style name="Text.Note.Name">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">@dimen/layout_8dp</item>
@@ -154,7 +154,7 @@
         <item name="android:textSize">@dimen/text_16sp</item>
     </style>
 
-    <style name="Text.NoteItem.Roll">
+    <style name="Text.Note.Roll">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
@@ -165,7 +165,7 @@
         <item name="android:textSize">@dimen/text_16sp</item>
     </style>
 
-    <style name="Text.NoteItem.Content">
+    <style name="Text.Note.Content">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:ellipsize">end</item>
@@ -174,7 +174,7 @@
         <item name="android:textSize">@dimen/text_16sp</item>
     </style>
 
-    <style name="Text.NoteItem.Info">
+    <style name="Text.Note.Info">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginRight">@dimen/layout_4dp</item>
         <item name="android:ellipsize">end</item>
@@ -346,11 +346,11 @@
         <item name="android:layout_gravity">center</item>
     </style>
 
-    <style name="Image.NoteItem.Check">
+    <style name="Image.Note.Check">
         <item name="android:tint">?attr/clContent</item>
     </style>
 
-    <style name="Image.NoteItem.Info">
+    <style name="Image.Note.Info">
         <item name="android:layout_marginRight">@dimen/layout_4dp</item>
         <item name="android:tint">?attr/clNoteIndicator</item>
     </style>
